<resources>
    <string name="app_name">ToDo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_12_apr_2019">12 Apr 2019</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="date">Date</string>
    <string name="enter_task">Enter Task</string>
    <string name="task">Task</string>
    <string name="category">Category</string>
    <string name="add_category">Add Category</string>
    <string name="enter_title">Enter Title</string>
    <string name="title">Title</string>
    <string name="add_new_item">Add New Item</string>
    <string name="itemName">Item Name</string>
    <string name="delete">Delete</string>
    <string name="edit_task">Edit Task</string>
</resources>
