<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusedByDefault="true"
        android:focusable="true"
        app:layout_constraintCircleRadius="8dp"
        android:background="@color/colorWhite">

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:context=".ui.itemlisting.listing_main.items_list.ItemWithSubcategoryFragment"
            android:text="@string/add_new_item"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:gravity="center"
            android:paddingBottom="4dp"
            android:textColor="@color/colorPrimary"
            android:alpha="0.85"
            android:focusableInTouchMode="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/title"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="24dp"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:id="@+id/textInputLayout" app:layout_constraintTop_toBottomOf="@+id/title"
            android:layout_marginTop="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category_item_name"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 "
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:maxLength="50"
                android:textSize="@dimen/text_size"
                android:textColorHint="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="textCapWords"
                android:hint="@string/itemName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:id="@+id/create_subcategory_cancel"
            android:text="@string/cancel"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/cancel_button_bg"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:drawableStart="@drawable/ic_clear_black_24dp"
            android:textSize="@dimen/text_size"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/create_subcategory_done" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/create_subcategory_done" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <TextView
            android:layout_width="134dp"
            android:layout_height="45dp"
            android:id="@+id/create_subcategory_done"
            android:text="@string/done"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/done_button_bg"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="@dimen/text_size"
            android:drawableStart="@drawable/ic_done"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/create_subcategory_cancel"
            app:layout_constraintTop_toTopOf="@+id/create_subcategory_cancel"
            app:layout_constraintHorizontal_bias="0.5"
            tools:layout_editor_absoluteY="511dp"/>



    <Space android:layout_width="wrap_content" android:layout_height="8dp"
           android:id="@+id/bottom_space"
           app:layout_constraintStart_toStartOf="@+id/create_subcategory_done"
           app:layout_constraintEnd_toEndOf="@+id/create_subcategory_done"
           app:layout_constraintTop_toBottomOf="@+id/create_subcategory_done"/>

</androidx.constraintlayout.widget.ConstraintLayout>